--- a/ScreenShot/ScreenShot.vbproj
+++ b/ScreenShot/ScreenShot.vbproj
@@ -121,6 +121,12 @@
     <Compile Include="settingsform.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="welcome.Designer.vb">
+      <DependentUpon>welcome.vb</DependentUpon>
+    </Compile>
+    <Compile Include="welcome.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="colorresult.resx">
@@ -143,6 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="settingsform.resx">
       <DependentUpon>settingsform.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="welcome.resx">
+      <DependentUpon>welcome.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
